--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@
 /UF1/New Folder/WarBattle/build/
 /CasaMain/nbproject/private/
 /CasaMain/build/
+/UF4/CasaMain/nbproject/private/
+/UF4/CasaMain/build/
+/UF4/ArrayListPrebas/nbproject/private/
+/UF4/ArrayListPruebas/nbproject/private/
+/UF4/ArrayListPruebas/dist/
+/UF4/ArrayListPruebas/build/
