--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@
 /UF4/ArrayListPruebas/nbproject/private/
 /UF4/ArrayListPruebas/dist/
 /UF4/ArrayListPruebas/build/
+/UF4/DofivsFoca/nbproject/private/
+/UF4/ExempleHerencia/nbproject/private/
+/UF4/ExempleHerencia/build/
