--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /UF4/DofivsFoca/nbproject/private/
 /UF4/ExempleHerencia/nbproject/private/
 /UF4/ExempleHerencia/build/
+/UF4/Pokedex/nbproject/private/
