--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /UF4/ExempleHerencia/build/
 /UF4/Pokedex/nbproject/private/
 /UF4/Pokedex/build/
+/UF4/AppElectrodomesticos/nbproject/private/
+/UF4/Banco/nbproject/private/
