--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@
 /UF4/Pokedex/build/
 /UF4/AppElectrodomesticos/nbproject/private/
 /UF4/Banco/nbproject/private/
+/UF4/ExcepcionesDeUsuario/nbproject/private/
+/UF4/ExcepcionesDeUsuario/build/
+/UF5/ExcepcionesDeUsuario/build/
+/UF5/ExcepcionesDeUsuario/nbproject/private/
+/UF5/Ex5_Exepciones/nbproject/private/
+/UF5/Ex5_Exepciones/build/
+/UF5/Ex5_Exepciones/dist/
+/UF5/Ex6_Excepciones/nbproject/private/
