--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /UF5/Ex5_Exepciones/build/
 /UF5/Ex5_Exepciones/dist/
 /UF5/Ex6_Excepciones/nbproject/private/
+/UF5/TestMenu/nbproject/private/
+/UF5/TestMenu/build/
